added a title to the home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -97,9 +97,15 @@
                 </div>
 
             </nav>
+            <div class="hero text-center" style="margin:20px;">
+                <hr>
+                <h2>Using Data Science and Analytics to Solve Engineering Problems</h2>
+                <hr>
+               
+            </div>
             <div class="row">
                 <div class="col-md-4">
-                    <h5>Concrete Facts:</h5>
+                    <h4>Concrete Facts:</h4>
                     <a href="https://ekaconcrete.com/10-impressive-facts-concrete/" target="_blank"
                         style='text-decoration: none;color:white;'>
                         <p>Concrete is used more than any other material in the world.
