--- a/templates/index.html
+++ b/templates/index.html
@@ -101,7 +101,7 @@
                 <hr>
                 <h2>Using Data Science and Analytics to Solve Engineering Problems</h2>
                 <hr>
-               
+
             </div>
             <div class="row">
                 <div class="col-md-4">
@@ -138,7 +138,7 @@
                     </div>
                 </div> -->
                 <div class="col-md-4" style="float:right;margin-right: 65px;">
-                    <div>
+                    <div >
                         <figure>
 
                             <a href="https://www.smithsonianmag.com/smart-news/scientific-reason-why-pantheon-hasnt-crumbled-180953627/"
@@ -155,6 +155,7 @@
                                 (https://www.smithsonianmag.com/smart-news/scientific-reason-why-pantheon-hasnt-crumbled-180953627/).
                             </figcaption> -->
                             </a>
+                            <figcaption style="text-align: center;margin-top: 5px;"><p>Figure 1.0 - The Pantheon</p></figcaption>
                         </figure>
 
                     </div>
@@ -164,7 +165,7 @@
             <div class="row">
                 <div class="col-md-12" style="margin:10px;">
                     <h4>Data analysis was done using the Python programming language and its libraries: scikit_learn,
-                        pandas, keras, numpy, and matplotlib.
+                        pandas, keras, numpy, seaborn, and matplotlib.
                         From the Figure 1.1, we can see that the most important components contributing to the
                         compressive strength of concrete are water, cement, and age.
                         We were able to achieve an accuracy score of 89% with a mean squared error (MSE) of 27.9 and
@@ -198,7 +199,7 @@
 
 
                         <figcaption style="text-align: center;">
-                            <p>Figure 1.1</p>
+                            <p>Figure 1.1 - Machine Learing Model Stats</p>
                         </figcaption>
                 </figure>
 
@@ -212,9 +213,21 @@
                                 width="600" height="600">
                         </div>
                         <figcaption style="text-align: center;">
-                            <p>Figure 1.2</p>
+                            <p>Figure 1.2 - Scatter Matrix Plot</p>
                         </figcaption>
                     </figure>
+                </div>
+                <div class="row">
+                    <div class="col-md-12" style="margin-top:10px;text-align: center;">
+                        <figure>
+                            <figcaption style="text-align: center;">Figure 1.3 - Final Project Flow Chart</figcaption>
+                            <img class="img-responsive" id="myimage1"
+                                src="static\image\Final Project Flow Chart - Current.png" alt="Final Project Flow Chart"
+                                style="background-color: white;box-shadow: 5px 5px 5px 5px black;border-radius:15px">
+                        </figure>
+                    </div>
+
+
                 </div>
             </div>
 
