--- a/templates/index.html
+++ b/templates/index.html
@@ -167,9 +167,7 @@
                     <h4>Data analysis was done using the Python programming language and its libraries: scikit_learn,
                         pandas, keras, numpy, seaborn, and matplotlib.
                         From the Figure 1.1, we can see that the most important components contributing to the
-                        compressive strength of concrete are water, cement, and age.
-                        We were able to achieve an accuracy score of 89% with a mean squared error (MSE) of 27.9 and
-                        mean absolute error (MAE) of 3.44. With the Random Forest Regression (RFR) model, we were able
+                        compressive strength of concrete are water, cement, and age. With a Random Forest Regression (RFR) model, we were able
                         to achieve
                         our highest accuracy score of 89% with a mean squared error (MSE) of 27.9 and mean absolute
                         error
