--- a/templates/water.html
+++ b/templates/water.html
@@ -51,7 +51,7 @@
                 <div class="col-md-12">
                     <aside class="filters">
                         <div class="panel panel-default">
-                            <div class="panel-heading" style="text-align: center;">Predict the Strength of Your Concrete
+                            <div class="panel-heading" style="text-align: center;">Predict Water Potability
                             </div>
                             <div class="row">
                                 <div class="col-md-6 col-sm-6" style="text-align: center;margin-top: 10px;">
