changed some placeholder values

--- a/templates/water.html
+++ b/templates/water.html
@@ -74,48 +74,48 @@
                                             <li class="filter list-group-item">
                                                 <label for="ph">pH
                                                     <input class="form-control" id="ph" type="text" name="ph"
-                                                        placeholder="102-540" size="6"></label>
+                                                        placeholder="0.0-14.0" size="6"></label>
                                             </li>
                                             <li class="filter list-group-item">
                                                 <label for="hardness">Hardness (mg/L)
                                                     <input class="form-control" id="hardness" type="text"
-                                                        name="hardness" placeholder="102-540" size="6"></label>
+                                                        name="hardness" placeholder="47.0-323.0" size="6"></label>
                                             </li>
                                             <li class="filter list-group-item">
                                                 <label for="solids">Solids (ppm)
                                                     <input class="form-control" id="solids" type="text" name="solids"
-                                                        placeholder="0-359" size="2"></label>
+                                                        placeholder="321.0-61.2K" size="2"></label>
                                             </li>
                                             <li class="filter list-group-item">
                                                 <label for="chloramines">Chloramines (ppm)
                                                     <input class="form-control" id="chloramines" type="text"
-                                                        placeholder="0-200" name="chloramines" size="4"></label>
+                                                        placeholder="0.30-14.0" name="chloramines" size="4"></label>
                                             </li>
                                             <li class="filter list-group-item">
                                                 <label for="sulfate">Sulfate (mg/L)
                                                     <input class="form-control" id="sulfate" type="text"
-                                                        placeholder="122-247" name="sulfate" size="6"></label>
+                                                        placeholder="129.0-481.0" name="sulfate" size="6"></label>
                                             </li>
                                             <li class="filter list-group-item">
                                                 <label for="conductivity">Conductivity ( µS/cm)
                                                     <input class="form-control" id="conductivity" type="text"
-                                                        name="conductivity" placeholder="0-33" size="5"></label>
+                                                        name="conductivity" placeholder="181.0-753.0" size="5"></label>
                                             </li>
                                             <li class="filter list-group-item">
                                                 <label for="organic_carbon">Organic Carbon (ppm)
                                                     <input class="form-control" id="organic_carbon" type="text"
-                                                        name="organic_carbon" placeholder="801-1.15k" size="5"></label>
+                                                        name="organic_carbon" placeholder="2.0-29.0" size="5"></label>
                                             </li>
 
                                             <li class="filter list-group-item">
                                                 <label for="trihalomethanes">Trihalomethanes (µg/L)
                                                     <input class="form-control" id="trihalomethanes" type="text"
-                                                        name="trihalomethanes" placeholder="594-993" size="5"></label>
+                                                        name="trihalomethanes" placeholder="0.7-124.0" size="5"></label>
                                             </li>
                                             <li class="filter list-group-item">
                                                 <label for="turbidity">Turbidity (NTU)
                                                     <input class="form-control" id="turbidity" type="text"
-                                                        name="turbidity" placeholder="1-365" size="5"></label>
+                                                        name="turbidity" placeholder="1.4-7.0" size="5"></label>
                                             </li>
                                         </ul>
                                     </div>
